--- a/A/templates/inc/navbar.html
+++ b/A/templates/inc/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <div class="navbar-nav">
       <a class="navbar-brand" href="{% url 'home:home' %}">Home</a>
